add color changes

--- a/AllDemoInOne/res/layout/listview_filter_activity.xml
+++ b/AllDemoInOne/res/layout/listview_filter_activity.xml
@@ -29,7 +29,7 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_weight="0.5"
-        android:onClick="addPlanet"
+        android:onClick="addColor"
         android:text="Add Colors" />
 
 </LinearLayout>
